// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renders correctly 1`] = `
<DocumentFragment>
  <div
    class="o-grid u-text"
    data-name="grid"
  >
    lorem
  </div>
</DocumentFragment>
`;

exports[`Grid renders correctly with full width children 1`] = `
<DocumentFragment>
  <div
    class="o-grid u-text o-grid--full"
    data-name="grid"
  >
    <div
      class="o-grid__cell"
      data-name="grid-cell"
    >
      lorem
    </div>
    <div
      class="o-grid__cell"
      data-name="grid-cell"
    >
      ipsum
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid renders correctly with responsive props 1`] = `
<DocumentFragment>
  <div
    class="o-grid u-text o-grid--xsmall-fit o-grid--small-full o-grid--medium-fit o-grid--large-full o-grid--xlarge-fit o-grid--super-full"
    data-name="grid"
  >
    <div
      class="o-grid__cell o-grid__cell--width-50"
      data-name="grid-cell"
    >
      lorem
    </div>
    <div
      class="o-grid__cell o-grid__cell--width-50"
      data-name="grid-cell"
    >
      ipsum
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid renders correctly with wrapped children 1`] = `
<DocumentFragment>
  <div
    class="o-grid u-text o-grid--wrap"
    data-name="grid"
  >
    <div
      class="o-grid__cell o-grid__cell--width-50"
      data-name="grid-cell"
    >
      lorem
    </div>
    <div
      class="o-grid__cell o-grid__cell--width-66"
      data-name="grid-cell"
    >
      ipsum
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid renders correctly without gutters 1`] = `
<DocumentFragment>
  <div
    class="o-grid u-text o-grid--no-gutter"
    data-name="grid"
  >
    <div
      class="o-grid__cell o-grid__cell--width-50"
      data-name="grid-cell"
    >
      lorem
    </div>
    <div
      class="o-grid__cell o-grid__cell--width-50"
      data-name="grid-cell"
    >
      ipsum
    </div>
  </div>
</DocumentFragment>
`;
